ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: jahanbhai.mdmahfujarrahman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama-service
                port:
                  number: 11434
